cm4all-workshop (1.0.7) unstable; urgency=low

  * doc: allow UPDATE on unassigned jobs

 --   

cm4all-workshop (1.0.6) unstable; urgency=low

  * debian/init: use "exec" to invoke the logger
  * debian/control: add "Vcs-git" header
  * debian/control: add ${misc:Depends}

 -- Max Kellermann <mk@cm4all.com>  Fri, 21 Sep 2012 07:51:15 -0000

cm4all-workshop (1.0.5) unstable; urgency=low

  * jobs.sql: removed initial "DROP TABLE"
  * queue: reconnect after UPDATE failure

 -- Max Kellermann <mk@cm4all.com>  Fri, 21 Oct 2011 18:08:30 +0200

cm4all-workshop (1.0.4) unstable; urgency=low

  * move jobs.sql to its own, independend package

 -- Christian Weber <cw@cm4all.com>  Wed, 02 Feb 2011 10:47:11 +0100

cm4all-workshop (1.0.3) unstable; urgency=low

  * queue: allow startup without database connection
  * build with GLib

 -- Max Kellermann <mk@cm4all.com>  Mon, 23 Nov 2009 14:11:36 +0100

cm4all-workshop (1.0.2) unstable; urgency=low

  * finished the "USER" to "WORKSHOP_USER" variable rename in the init
    script

 -- Christian Weber <cw@cm4all.com>  Thu, 26 Mar 2009 16:02:41 +0100

cm4all-workshop (1.0.1) unstable; urgency=low

  * renamed the .default variable "USER" to "WORKSHOP_USER", trying to
    retain compatibility with old .default files
  * build with libpq5 (PostgreSQL 8.3)

 -- Max Kellermann <mk@cm4all.com>  Mon, 02 Mar 2009 12:07:20 +0100

cm4all-workshop (1.0) unstable; urgency=low

  * bumped version number to 1.0

 -- Max Kellermann <mk@cm4all.com>  Thu, 05 Jun 2008 16:56:10 +0200

cm4all-workshop (0.2.4) unstable; urgency=low

  * use the libdaemon user code
  * run logger as user "cm4all-logger"
  * delete log directory on purge
  * bugfix: re-initialize event in queue_set_timeout()
  * moved DH_COMPAT to debian/compat

 -- Max Kellermann <mk@cm4all.com>  Mon, 18 Feb 2008 14:06:07 +0100

cm4all-workshop (0.2.3) unstable; urgency=low

  * set real uid to non-privileged user
  * call dh_installdirs in debian/rules
