@@ -1,6 +1,9 @@
 cm4all-workshop (1.0.7) unstable; urgency=low
 
   * doc: allow UPDATE on unassigned jobs
+  * sql: notify all clients when a job was finished
+    - requires PostgreSQL 9.1 or newer
+    - must reapply jobs.sql for the new "CREATE RULE" statement
 
  --   
 
